# s3gfn

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experiments/pmo/: README.md  run.py
experiments/pmo/main/: optimizer.py
experiments/pmo/main/s3gfn/: __init__.py  ga_expert.py  hparams_default.yaml  replay_buffer.py  run.py  synth_utils.py  utils.py
experiments/pmo/main/s3gfn/genetic_operator/: __init__.py  mutate.py
src/s3gfn/: __init__.py  chem_metrics.py  replay_buffer.py  scoring_function.py  synthesis_eval.py  synthesis_unidock_test.py  synthesizability.py  train.py
src/synth_smiles/: synthesis_eval.py  train.py
